[package]

name = "libxdo"
version = "0.4.1"
authors = ["Mika Attila <radiantstatue@gmail.com>"]
license = "MIT"
description = "Bindings to libxdo"
readme = "README.md"
repository = "https://github.com/crumblingstatue/rust-libxdo"
documentation = "http://crumblingstatue.github.io/doc/libxdo/libxdo/index.html"
keywords = ["X11", "automation", "xdotool", "libxdo", "xdo"]

[dependencies]
libc = "0.1.10"
libxdo-sys = "0.10.0"
